MET-7033 Cleanup